Projet GL/test/src/test/deca/context/valid/increment2/bool-neq.deca
// Test not equal for a bool

// Historique : cree le 11/01/2023

{
    int a = 3, b=4;

    boolean c = a != b;
}