Projet GL/test/src/test/deca/context/invalid/increment2/bool-minus-bool.deca
// Test : bool := -bool

// Historique : cree le 11/01/2023

{
    boolean a,b;

    a = -b;
}